--- a/firefox/popup.css
+++ b/firefox/popup.css
@@ -83,3 +83,25 @@ body {
 .mark-action:hover {
   background-color: #eee;
 }
+.popup-text {
+  z-index: 99;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+}
+.popup-text div {
+  background-color: white;
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 3px;
+  font-weight: bold;
+  text-align: center;
+}
