--- a/firefox/popup.css
+++ b/firefox/popup.css
@@ -98,15 +98,19 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
-  display: flex;
   overflow: auto;
+}
+.popup-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .popup-text > div, .bm-edit {
   background-color: white;
   margin: 20px;
   padding: 10px;
   border-radius: 3px;
-  overflow: auto;
+  /* overflow: auto; */
 }
 .popup-text > div {
   font-weight: bold;
