update ui when the size is different

--- a/firefox/popup.css
+++ b/firefox/popup.css
@@ -110,6 +110,7 @@ body {
   margin: 20px;
   padding: 10px;
   border-radius: 3px;
+  overflow: auto;
 }
 .popup-text > div {
   font-weight: bold;
