--- a/web/index.css
+++ b/web/index.css
@@ -93,14 +93,17 @@ body {
   text-align: center;
 }
 
-#no-bookmark-message {
+#no-bookmark-message, .single-bookmark, .ds-wrapper {
   width: 80%;
   max-width: 600px;
   color: #757575;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);
   display: flex;
-  flex-direction: column;
   margin-bottom: 10px;
+}
+
+#no-bookmark-message {
+  flex-direction: column;
 }
 #no-bookmark-message:hover {
   /* box-shadow: 0px 0px 3px 3px rgba(63,81,181,.5); */
@@ -117,13 +120,7 @@ body {
 }
 
 .single-bookmark {
-  color: #757575;
-  width: 80%;
-  max-width: 600px;
-  display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.25);
   min-height: 50px;
   justify-content: center;
   align-items: stretch;
@@ -312,29 +309,22 @@ textarea {
 .error-message > .close-message {
   background-color: #E57373;
 }
-.ss-wrapper {
-  z-index: 99;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+.ds {
+  margin: 10px;
+  flex-grow: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
-.ss {
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 5px;
+.ds * {
+  flex-grow: 1;
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  padding: 5px;
+  user-select: none;
+  -webkit-user-select: none;
 }
-.ss-title {
-  border-bottom: 1px dashed;
-  align-self: center;
-}
-.ss-sort {
-  
+.ds > *:hover {
+  background-color: #eee;
 }
