--- a/web/index.css
+++ b/web/index.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Roboto Slab", "serif";
+  font-family: "Roboto Slab", serif;
   padding: 0px;
   margin: 0px;
 }
@@ -84,6 +84,7 @@ body {
 .card-box > div:hover {
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
 }
+
 #sign-in-button {
   height: 50px;
   display: flex;
@@ -111,9 +112,6 @@ body {
 #no-bookmark-message {
   flex-direction: column;
 }
-#no-bookmark-message:hover {
-  /* box-shadow: 0px 0px 3px 3px rgba(63,81,181,.5); */
-}
 #no-bookmark-message > div {
   text-align: center;
   margin: 5px 15px;
@@ -131,8 +129,11 @@ body {
   justify-content: center;
   align-items: stretch;
 }
-.overview:hover {
-  /* box-shadow: 0px 0px 3px 3px rgba(205,220,57,.5); */
+.single-bookmark .primary-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 24px 16px 16px;
 }
 .overview {
   display: flex;
@@ -141,7 +142,7 @@ body {
   padding: 20px;
   align-items: center;
 }
-.favicon {
+.single-bookmark .favicon {
   width: 30px;
   height: 30px;
   margin-right: 10px;
@@ -150,18 +151,24 @@ body {
   align-items: center;
   justify-content: center;
 }
-.desc {
+.single-bookmark .desc {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   overflow: hidden;
 }
-.bm-title, .bm-url {
+.single-bookmark .bm-title, .single-bookmark .bm-url {
   padding: 1px 10px;
   border-radius: 1em;
   white-space: nowrap;
-
+}
+.single-bookmark .bm-title {
+  font-weight: 700;
+  font-size: 150%;
+}
+.single-bookmark .bm-url {
+  font-size: 90%;
 }
 .bm-title:hover, .bm-url:hover {
   background-color: #eee;
