--- a/web/index.css
+++ b/web/index.css
@@ -206,8 +206,30 @@ body {
 }
 .details > * {
   display: flex;
-  /* margin: 10px 0px; */
+  flex-direction: column;
 }
+.details > *:not(:first-child) {
+  margin-top: 16px;
+}
+.details .section-title {
+  font-weight: 700;
+  font-size: 80%;
+}
+.details > * > *:nth-child(2) {
+  font-weight: 300;
+}
+.details .fa-pencil {
+  opacity: 0.25;
+}
+.details .fa-pencil:hover {
+  opacity: 1;
+}
+.details .desc-display {
+  word-wrap: wrap;
+  width: 100%;
+  height: 10em;
+}
+
 .details .title-edit {
   align-items: center;
 }
