--- a/web/index.css
+++ b/web/index.css
@@ -237,6 +237,9 @@ body {
   width: 100%;
   height: 10em;
 }
+.details textarea {
+  height: 10em;
+}
 .details input[type="text"], .details textarea {
   font-size: 100%;
   font-weight: inherit;
