--- a/web/index.css
+++ b/web/index.css
@@ -64,6 +64,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 65px;
 }
 
 .card-box {
@@ -74,14 +75,14 @@ body {
   margin: 0px 5px 10px;
   border-radius: 3px;
   border: 1px solid #ddd;
-  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25);
+  /* box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25); */
   color: #757575;
   display: flex;
 }
 .card-box.arrange-grid {
   width: 250px!important;
 }
-.card-box > div:hover {
+.card-box > div:hover, .card-box.show-details > div {
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
 }
 
@@ -268,14 +269,6 @@ body {
   color: #fff;
 }
 
-.details .cat-edit {
-  flex-direction: column;
-}
-.cat-input {
-  display: flex;
-  align-items: center;
-}
-
 textarea, input[type="text"] {
   padding: 5px 0;
   background-color: rgba(0,0,0,0);
@@ -287,10 +280,6 @@ textarea:focus, input[type="text"]:focus {
 }
 textarea {
   resize: none;
-}
-.details .title-edit input, .cat-input input {
-  flex-grow: 1;
-  margin-left: 5px;
 }
 
 #global-actions {
@@ -314,6 +303,7 @@ textarea {
   margin-top: 10px;
   user-select: none;
   -moz-user-select: none;
+  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
 }
 #global-actions .g-action-button:hover { background-color: #DCE775; }
 .message-wrapper {
