--- a/web/index.css
+++ b/web/index.css
@@ -153,8 +153,8 @@ body {
   overflow: hidden;
 }
 .single-bookmark .bm-title, .single-bookmark .bm-url {
-  padding: 1px 10px;
-  border-radius: 1em;
+  padding: 0px 5px;
+  /* border-radius: 1em; */
   white-space: nowrap;
 }
 .single-bookmark .bm-title {
@@ -306,46 +306,41 @@ textarea {
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
 }
 #global-actions .g-action-button:hover { background-color: #DCE775; }
+
 .message-wrapper {
   position: fixed;
-  bottom: 20px;
-  left: 20px;
-  right: 100px;
+  font-size: 150%;
+  left: 0px;
+  top: 2.5em;
+  width: 100%;
+  height: 100%;
   padding: 10px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,.25);
 }
-.message {
+.content {
   width: auto;
-  background-color: rgba(117,117,117);
-  opacity: .5;
-  color: #fff;
-  padding: 10px 10px 10px 15px;
-  border-radius: 30px;
+  background-color: white;
+  color: #757575;
+  padding: 10px 10px 10px 10px;
+  border-radius: 5px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
-.message:hover {
-  opacity: 1;
+.message-wrapper .title {
+  font-weight: 300;
+  font-size: 90%;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
 }
-.error-message {
-  background-color: rgb(244,67,54);
+.message-wrapper .message {
+  font-size: 67%;
 }
-.close-message {
-  background-color: rgb(153,153,153);
-  border-radius: 25px;
-  width: 25px;
-  height: 25px;
-  margin-left: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-.error-message > .close-message {
-  background-color: #E57373;
-}
+
 .ds {
   padding: 10px;
   flex-grow: 1;
