--- a/web/index.css
+++ b/web/index.css
@@ -159,7 +159,7 @@ body {
   white-space: nowrap;
 }
 .single-bookmark .bm-title {
-  font-weight: 700;
+  font-weight: bolder;
   font-size: 150%;
 }
 .single-bookmark .bm-url {
@@ -187,6 +187,7 @@ body {
   cursor: pointer;
   user-select: none;
   -moz-user-select: none;
+  -webkit-user-select: none;
 }
 .actions-group > * > *:not(:first-child) {
   margin-left: 0px;
@@ -208,11 +209,11 @@ body {
   margin-top: 16px;
 }
 .details .section-title {
-  font-weight: 700;
+  font-weight: bolder;
   font-size: 80%;
 }
 .details > * > *:not(:first-child) {
-  font-weight: 300;
+  font-weight: lighter;
 }
 .details .action {
   opacity: 0.25;
@@ -304,6 +305,7 @@ textarea {
   margin-top: 10px;
   user-select: none;
   -moz-user-select: none;
+  -webkit-user-select: none;
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
 }
 #global-actions .g-action-button:hover { background-color: #DCE775; }
@@ -315,7 +317,6 @@ textarea {
   top: 2.5em;
   width: 100%;
   height: 100%;
-  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -325,21 +326,72 @@ textarea {
   width: auto;
   background-color: white;
   color: #757575;
-  padding: 10px 10px 10px 10px;
-  border-radius: 5px;
+  /* padding: 10px; */
+  margin: 10px;
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
+  font-size: 67%;
 }
-.message-wrapper .title {
-  font-weight: 300;
-  font-size: 90%;
+/* .message-wrapper .title {
+  font-weight: lighter;
   text-align: center;
   border-bottom: 1px solid #ddd;
 }
+.message-wrapper .prompt {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 16px;
+}
+.message-wrapper .prompt > div {
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+}
+.message-wrapper .prompt > div:hover {
+  background-color: #ddd;
+  color: #fff;
+} */
+.message-wrapper .title {
+  font-weight: bolder;
+  font-size: 130%;
+  margin: 24px;
+  margin-bottom: 10px;
+}
 .message-wrapper .message {
-  font-size: 67%;
+  color: #999;
+  margin: 24px;
+  margin-top: 10px;
+}
+.message-wrapper .prompt {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 8px 8px 8px 24px;
+}
+.message-wrapper .prompt > div {
+  height: 36px;
+  border-radius: 3px;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  display: flex;
+  align-items: center;
+  color: #827717;
+  min-width: 48px;
+  padding: 0px 8px;
+}
+.message-wrapper .prompt > div:not(:last-child) {
+  margin-right: 8px;
+}
+.message-wrapper .prompt > div:hover {
+  background-color: #eee;
 }
 
 .ds {
@@ -358,6 +410,7 @@ textarea {
   padding: 5px;
   user-select: none;
   -webkit-user-select: none;
+  -moz-user-select: none;
 }
 .ds > *:hover {
   background-color: #eee;
