--- a/web/index.css
+++ b/web/index.css
@@ -34,19 +34,19 @@ body {
 }
 
 #header {
-  font-size: 150%;
-  padding: .5em;
-  height: 2em;
+  font-size: 120%;
+  padding: 10px;
+  height: 40px;
   display: flex;
   align-items: center;
-  border-bottom: 2px dashed #CDDC39;
-  box-shadow: 0px 3px 5px 0px rgba(205,220,57,.5);
+  border-bottom: 1px solid #cddc39;
+  /* box-shadow: 0px 3px 5px 0px rgba(205,220,57,.5); */
   cursor: pointer;
   background-color: #fff;
   color: #827717;
   position: sticky;
   top: 0px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   z-index: 99;
 }
 
@@ -314,13 +314,13 @@ textarea {
   position: fixed;
   font-size: 150%;
   left: 0px;
-  top: 2.5em;
+  top: 61px;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0,0,0,.25);
+  background-color: rgba(0,0,0,.15);
 }
 .content {
   width: auto;
